# cpp-build-with-cmake

./: CMakeLists.txt  README.md
src/: main.cpp
