cmake_minimum_required (VERSION 3.5)
project (project_name)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED on)
include_directories(include)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -O2")
message(STATUS "CMAKE_CXX_FLAGS before REPLACE: ${CMAKE_CXX_FLAGS}")
string(REPLACE "-Wall" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
message(STATUS "CMAKE_CXX_FLAGS after REPLACE: ${CMAKE_CXX_FLAGS}")
add_executable(helloworld src/main.cpp)